# lineo-admin

./: .gitignore  LICENSE.txt  Makefile  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
project/: settings.py  urls.py
src/: admin.js  admin.scss
src-js/: admin_tw.css
src/lineo_admin/: __init__.py  access.py  apps.py  lineo_admin.py  mixins.py  registry.py  urls.py  views.py
src/lineo_admin/static/: lineo-admin.js  tailwind4.css
src/lineo_admin/templates/: 403.html
src/lineo_admin/templates/cotton/: button.html  field.html  h1.html  input.html  link.html
src/lineo_admin/templates/lineo_admin/: base.html  base_anon.html  delete.html  edit.html  field.html  list.html  login.html  logout.html  sidebar-item.html  sidebar-items.html  sidebar.html
src/lineo_admin/templates/lineo_admin/anon/: base.html  login.html  logout.html
src/lineo_admin/templates/lineo_admin/includes/: drawer-button.html  drawer.html  spinner.html
src/lineo_admin/templates/lineo_admin/sidebar/: menu.html
src/lineo_admin/templates/lineo_admin/tw/: base.html  error_list.html  field.html  sidebar.html
src/lineo_admin/templates/lineo_admin/tw/anon/: base.html  login.html  logout.html
src/lineo_admin/templates/lineo_admin/tw/includes/: drawer-button.html
src/lineo_admin/templatetags/: get.py  sidebar.py  tw.py  urlaccess.py
