[project]
name = "lineo-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "J. David Ibáñez", email = "jdavid.ibp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["django-cotton", "django-htmx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
